# PerudoBots

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/perudo_bots/: __init__.py
